--- a/css-basic/index.html
+++ b/css-basic/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
     <link rel="stylesheet" href="index.css" />
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+
     <title>Basic CSS</title>
   </head>
   <body>
-    <h1>React</h1>
+    <div class="header">
+      <h1 class="title">React</h1>
+      <i class="fas fa-heart"></i>
+    </div>
+
     <img src="react.png" alt="react" />
     <div class="conteudo">
       <p>
@@ -23,11 +30,20 @@
         fórmulas mágicas para ser um desenvolvedor front-end, basta ter
         persistência e dedicação.
         <a
-          class="a-link"
           href="https://medium.com/@leonardocescaf/como-ser-um-desenvolvedor-front-end-em-2018-7a1beaee2f6f"
           >C Como ser um desenvolvedor FRONT-END em 2018?</a
         >
       </p>
+      <div class="box">
+        This text is the content of the box. We have added a 50px padding, 20px
+        margin and a 15px green border. Ut enim ad minim veniam, quis nostrud
+        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+        dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <div class="branco"></div>
+      <div class="conteudo"></div>
     </div>
   </body>
 </html>
